@@ -3,11 +3,15 @@ package com.example.demo.stream.selfcode.example;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 public class SelfPracticeNumbers {
     public static void main(String[] args) {
 
-        List<Integer> numberList = Arrays.asList(10,20,30,40,50,10,20,60);
+        List<Integer> numberList = Arrays.asList(10,20,30,40,50,10,20,60); // fixed size but mutable list, null allowed, value can be changed using set method
+//        List<Integer> numbers = List.of(10, 20, 30, 40, 50, 10, 20, 60); // fixed size and immutable list, null not allowed
+
 
         // Find 2nd largest number in a list OUTPUT: 50
         Optional<Integer> res = numberList.stream().sorted(Comparator.reverseOrder()).skip(1).findFirst();
@@ -46,10 +50,22 @@ public class SelfPracticeNumbers {
         numberList.stream().collect(Collectors.groupingBy(Function.identity(), LinkedHashMap::new ,Collectors.counting()))
                 .entrySet().stream().filter(e->e.getValue()==1).findFirst().map(Map.Entry::getKey).ifPresent(e-> System.out.println("First non-repeated number: " + e));
 
-        // find the sum of all number from the list
+        // find the SUM of all number from the list //TIPS sum() only works with IntStream, LongStream, DoubleStream
+//        Stream ke elements Integer objects hote हैं.
+//        But sum() method normal Stream<Integer> pe directly work nahi karta.
+//        (क्योंकि objects ke stream ko sum karne ke liye pehle primitive int chahiye.)
+//        ✅ इसलिए mapToInt() ek specialized mapping function hai
+//        जो Stream<Integer> ko convert karta hai → IntStream me.
+
         Integer sum = numberList.stream().mapToInt(e->e).sum();
-        numberList.stream().reduce(0,(Integer::sum));
+        Integer sum2 = numberList.stream().reduce(0,(Integer::sum));
         System.out.println(sum);
+        System.out.println(sum2);
+
+        // Find SUM all elements in an array using java 8. Input: {2,3,4,5,7}
+        int [] arrays = {2,3,4,5,7};
+        int sum3 = Arrays.stream(arrays).sum();
+        System.out.println(sum3);
 
         // find the sum of all even number from the list
         Integer evenNumberSum = numberList.stream().filter(e->e%2==0).mapToInt(e->e).sum();
